# CProgrammingAModernApproach

./: 10-1guess.c  10-2guess2.c  10-3poker.c  11-1maxmin.c  12-1reverse3.c  13-1remind.c  13-2planet.c  15-1justify.c  15-1line.c  15-1line.h  15-1word.c  15-1word.h  16-1inventory.c  16-1readline.c  16-1readline.h  17-1remind2.c  17-2inventory.c  17-3tabulate.c  19-1stack.h  19-1stack1.c  19-1stack2.c  19-2stackADT.c  19-2stackADT.h  19-2stackclient.c  19-3stackADT2.c  19-3stackADT2.h  19-4stackADT3.c  2-1pun.c  2-2dweight.c  2-3dweight2.c  2-4celsius.c  20-1xor.c  20-2viewmemory.c  22-1canopen.c  22-2fcopy.c  22-3invclear.c  23-1tchrtest.c  23-2tcasemap.c  24-1tsignal.c  24-2tsetjmp.c  (+30 more)
