cmake_minimum_required(VERSION 3.20)
project(CProgrammingAModernApproach C)

set(CMAKE_C_STANDARD 99)

add_executable(CProgrammingAModernApproach main.c)
add_executable(2-1pun 2-1pun.c)
add_executable(2-2dweight 2-2dweight.c)
add_executable(2-3dweight2 2-3dweight2.c)
add_executable(2-4celsius 2-4celsius.c)
add_executable(3-1tprintf 3-1tprintf.c)
add_executable(3-2addfrac 3-2addfrac.c)
add_executable(4-1upc 4-1upc.c)
add_executable(5-1date 5-1date.c)
add_executable(6-1square 6-1square.c)
add_executable(6-2sum 6-2sum.c)
add_executable(6-3numdigits 6-3numdigits.c)
add_executable(6-4square2 6-4square2.c)
add_executable(6-5square3 6-5square3.c)
add_executable(6-6checking 6-6checking.c)
add_executable(7-1sum2 7-1sum2.c)
add_executable(7-2length 7-2length.c)
add_executable(7-3length2 7-3length2.c)


