cmake_minimum_required(VERSION 3.20)
project(CProgrammingAModernApproach C)

set(CMAKE_C_STANDARD 99)

add_executable(CProgrammingAModernApproach main.c)
add_executable(2-1pun 2-1pun.c)
add_executable(2-2dweight 2-2dweight.c)
add_executable(2-3dweight2 2-3dweight2.c)
add_executable(2-4celsius 2-4celsius.c)
add_executable(3-1tprintf 3-1tprintf.c)
add_executable(3-2addfrac 3-2addfrac.c)
add_executable(4-1upc 4-1upc.c)
add_executable(5-1date 5-1date.c)
add_executable(6-1square 6-1square.c)
add_executable(6-2sum 6-2sum.c)
add_executable(6-3numdigits 6-3numdigits.c)
add_executable(6-4square2 6-4square2.c)
add_executable(6-5square3 6-5square3.c)
add_executable(6-6checking 6-6checking.c)
add_executable(7-1sum2 7-1sum2.c)
add_executable(7-2length 7-2length.c)
add_executable(7-3length2 7-3length2.c)
add_executable(8-1reverse 8-1reverse.c)
add_executable(8-2repdigit 8-2repdigit.c)
add_executable(8-3interest 8-3interest.c)
add_executable(8-4deal 8-4deal.c)
add_executable(8-5reverse 8-5reverse.c)
add_executable(9-1average 9-1average.c)
add_executable(9-2countdown 9-2countdown.c)
add_executable(9-3pun2 9-3pun2.c)
add_executable(9-4prime 9-4prime.c)
add_executable(9-5qsort 9-5qsort.c)
add_executable(10-1guess 10-1guess.c)
add_executable(10-2guess2 10-2guess2.c)
add_executable(10-3poker 10-3poker.c)





